[package]
edition = "2021"
name = "joy_natives"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies.glfw-sys]
version = "5.0.0"
default-features = false
features = []

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, features = ["napi4"] }
napi-derive = "2.12.2"
gl = "0.14.0"
image = "0.24.8"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
strip = "symbols"
